imgs are sent to users

--- a/DiscordBot/.gitignore
+++ b/DiscordBot/.gitignore
@@ -1,4 +1,11 @@
 #ignore this file/environment variable
 .env
+
+#qodo extension
 .qodo
+
+#ide stuffs
 .vscode
+
+# download folder for users when prompting $download command
+/downloads
